# ex-web-app-rust

./: Cargo.toml  README.md
src/: main.rs
