[package]
name = "ex-web-app-rust"
version = "0.0.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "An example client-side browser-based web app with Rust and WebAssembly."
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/ex-web-app-rust"
repository = "https://github.com/resolvingarchitecture/ex-web-app-rust.git"
publish = true
readme = "README.md"
keywords = ["web","web-app","webassembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
